--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,6 @@ var/
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
-*.spec
 
 # Installer logs
 pip-log.txt
@@ -41,6 +40,7 @@ htmlcov/
 nosetests.xml
 coverage.xml
 pylint-report.txt
+.pytest_cache/
 
 # Translations
 *.mo
@@ -56,6 +56,9 @@ target/
 
 # PyCharm
 .idea/
+
+# vscode
+.vscode/
 
 # SQLite databases
 *.sqlite
